# ragterm

./: .env.example  .gitignore  LICENSE.md  README.md  cli.py  config.py  document_processor.py  domain.py  main.py  ollama_processor.py  pyproject.toml  qdrant_repository.py  upload_new.py
.github/: CONTRIBUTING.md
