[project]
name = "search-qdrant"
version = "0.1.0"
description = ""
authors = [
    {name = "LewiysArito",email = "nikita.kasimov.1044@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client[fastembed] (>=1.15.1,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "langchain (>=0.3.27,<0.4.0) ; python_version >= \"3.9\" and python_version < \"4.0\"",
    "langchain-community (>=0.3.29,<0.4.0) ; python_version >= \"3.9\" and python_version < \"4.0\"",
    "pypdf (>=6.0.0,<7.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
